adicionado novas paginas

--- a/exemplo03-if.html
+++ b/exemplo03-if.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js/exemplo02-string-funcoes.js"></script>
+    
+    <script src="js/exemplo03-if.js"></script>
+    
 </body>
 </html>
