exercicios whiles atu

--- a/exercicios while/exercicio-while.html
+++ b/exercicios while/exercicio-while.html
@@ -9,6 +9,8 @@
 
     <button onclick="exercicio01()">exercicio01</button>
 
+    <button onclick="exercicio02()">exercicio02</button>
+
     <script src="../exercicios while/exercicio-while.js"></script>
     
 </body>
