exercicios while até o 5 prontos

--- a/exercicios while/exercicio-while.html
+++ b/exercicios while/exercicio-while.html
@@ -11,6 +11,14 @@
 
     <button onclick="exercicio02()">exercicio02</button>
 
+    <button onclick="exercicio03()">exercicio03</button>
+
+    <button onclick="exercicio04()">exercicio04</button>
+
+    <button onclick="exercicio05()">exercicio05</button>
+
+    <button onclick="exercicio06()">exercicio06</button>
+
     <script src="../exercicios while/exercicio-while.js"></script>
     
 </body>
