--- a/exercicios while/exercicio-while.html
+++ b/exercicios while/exercicio-while.html
@@ -17,6 +17,8 @@
 
     <button onclick="exercicio05()">exercicio05</button>
 
+    <button onclick="exercicio06()">exercicio06</button>
+
     <button onclick="exercicio07()">exercicio07</button>
 
     <button onclick="exercicio08()">exercicio08</button>
