exercicios while 1 finalizados

--- a/exercicios while/exercicio-while.html
+++ b/exercicios while/exercicio-while.html
@@ -23,6 +23,10 @@
 
     <button onclick="exercicio08()">exercicio08</button>
 
+    <button onclick="exercicio09()">exercicio09</button>
+
+    <button onclick="exercicio10()">exercicio10</button>
+
     <script src="../exercicios while/exercicio-while.js"></script>
     
 </body>
